[metadata]
name = os-resource-classes
summary = Resource Classes for OpenStack
description_file =
    README.rst
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
url = https://docs.openstack.org/os-resource-classes/latest/
project_urls =
    Bug Tracker = https://storyboard.openstack.org/#!/project/openstack/os-resource-classes
    Documentation = https://docs.openstack.org/os-resource-classes/
    Source Code = https://opendev.org/openstack/os-resource-classes
python_requires = >=3.9
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[files]
packages =
    os_resource_classes
